WeeWX change history
--------------------

4.8.1 MM/DD/YYYY
Don't swallow syntax errors when wee_config is looking for drivers.

Fix problem that create 'ghost' values for VantageVue stations.
Fixes issue #771.

Try waking the Vantage console before giving up on LOOP errors.
Fixes issue #772.


4.8.0 04/21/2022
Allow unit to be overridden for a specific plot by using new option 'unit'.
Fixes issue #729.

Fix problem that prevented wind from appearing in NOAA yearly summaries.

Fix honoring global values for log_success and log_failure. Fix issue #757.

wee_import CSV imports now allow import of text fields. Addresses issue #732.

Explain in the Customizing Guide how to include arbitrary SQL expressions
in a plot.

Reorder font download order, for slightly faster downloads.
Fix issue #760.

Add observation types highOutTemp and lowOutTemp to group_temperature.

Add unit groups for sunshine and rain duration, cloudcover, and pop.
PR #765

Do not allow HUP signals (reload is not allowed as of V4.6).
PR #766.

Do not fork if using systemd.
PR #767.

Fix problem that prevented wee_config --reconfigure from working when
using Python 2.7, if the configuration file contained UTF-8 characters.


4.7.0 03/01/2022
Introduced new option "generate_once". If True, templates will be generated
only on the first run of the reporting engine. Thanks to user Rich! PR #748.

Added option wee_device --current for vantage.

Fixed two typos in the Standard skin.

Fixed spelling mistakes in the Norwegian translations.  Thanks to Aslak! PR#746

Supply a sensible default context for group_deltatime when no context has been
specified.

If windGustDir is missing, extract a value from the accumulators.

Fixed typo that shows itself if no [Labels]/[[Generic]] section is supplied.
Fixes issue #752.

Fixed calculation of field "bar_reduction" for Vantage type 2 LOOP packets.

Fix problem that prevents windSpeed and windDir from being displayed in
the RSS feed. Fixes issue #755.


4.6.2 02/10/2022